Change category projects to work
Changed posts/projects to posts/work and changed category name

--- a/_posts/work/2013-10-07-hwsycl.md
+++ b/_posts/work/2013-10-07-hwsycl.md
@@ -2,7 +2,7 @@
 title: Have We Seen Your Cat Lately
 layout: default
 href: http://www.haveweseenyourcatlately.com/Home.html
-category: projects
+category: work
 ---
 
 
